Applied fix for portfolio page on mobile - description erronously wrapped around screenshot thumb

--- a/src/styles/modules/project-listing.less
+++ b/src/styles/modules/project-listing.less
@@ -99,13 +99,18 @@ Standard Project Listing
             float: left;
             margin: 10px 0px 20px 0px;
         }
-        .project-name, .date, .link {
-            clear: both;
-            float: left;
-            width: 100%;
+        .project-summary {
+            .project-name, .date, .link {
+                clear: both;
+                float: left;
+                width: 100%;
+            }
+            .date {
+                margin: 0px 0px 3px 0px;
+            }
         }
-        .date {
-            margin: 0px 0px 3px 0px;
+        .description {
+            display: inline-block;
         }
         .btn {
             margin: 0px 0px 15px 0px;
